--- a/frontend/src/app/pages/welcome/welcome.component.html
+++ b/frontend/src/app/pages/welcome/welcome.component.html
@@ -10,7 +10,7 @@
                   matInput type="text"
                   autocomplete="off"
                   formControlName="destinationValue"
-                  placeholder="{{pageDataContent.searchArea.destination.placeholder}}">
+                  placeholder="{{pageDataContent.searchArea.destination.placeholder.text}}">
               <button mat-button 
                   [ngClass]="{'dirty': searchForm.value.destinationValue.length > 0}"
                   matSuffix mat-icon-button aria-label="Clear"
