--- a/frontend/src/app/pages/welcome/welcome.component.scss
+++ b/frontend/src/app/pages/welcome/welcome.component.scss
@@ -80,9 +80,35 @@
         .date {
             ::ng-deep {
                 .mat-form-field-infix {
-                    width: 220px;
-                    mat-date-range-input {
-                        // width: 70%;
+                    width: 180px;
+                    .mat-date-range-input-container {
+                        justify-content: space-between;
+                    }
+                }
+                .mat-form-field-flex {
+                    position: relative;
+                    // text-align: center;
+                }
+
+                .mat-form-field-suffix {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    right: 0;
+                    bottom: 0;
+                    mat-datepicker-toggle {
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        right: 0;
+                        bottom: 0;
+                        .mat-button-base {
+                            width: 100%;
+                            height: 100%;
+                            span {
+                                display: none!important;
+                            }
+                        }
                     }
                 }
             }
@@ -156,21 +182,18 @@
     @media screen and (max-width: 1199px) {
         padding-top: 20vh;
         &-search {
-
             .destination {
                 ::ng-deep {
                     .mat-form-field-infix {
-                        width: 80px;
+                        width: 160px;
                     }
                 }
             }
 
             .date {
-
                 ::ng-deep {
                     .mat-form-field-infix {
-                        width: 200px;
-
+                        width: 160px;
                         input:empty {
                             font-size: 0.9em;
                         }
@@ -242,9 +265,22 @@
                     }
                 }
             }
+            .date {
+                ::ng-deep  {
+                    mat-form-field {
+                       width: 260px;
+                    }
+                    .mat-form-field-infix {
+                        width: 100%;
+                    }
+                }
+            }
 
             .destination {
                 ::ng-deep {
+                    mat-form-field {
+                        width: 260px;
+                    }
                     .mat-form-field-wrapper {
                         .mat-icon-button {
                             width: 0.5em;
@@ -254,9 +290,6 @@
 
                     .mat-form-field-infix {
                         width: 100%;
-                    }
-                    mat-form-field {
-                        width: 250px;
                     }
                 }
             }
