--- a/frontend/src/styles/_visual_mixin.scss
+++ b/frontend/src/styles/_visual_mixin.scss
@@ -29,3 +29,19 @@
         background: $color-white-dull;
     };
 };
+
+@mixin container_box {
+    width: 1100px;
+    padding-left: 20px;
+    padding-right: 20px;
+    @media screen and (max-width: 1199px) {
+        width: 760px;
+    }
+    @media screen and (max-width: 767px) {
+        width: 100%;
+        padding-left: 10px;
+        padding-right: 10px;
+        min-width: 320px;
+        margin: 0px 10px;
+    }
+}
