--- a/frontend/src/app/pages/create-travel/create-travel.component.scss
+++ b/frontend/src/app/pages/create-travel/create-travel.component.scss
@@ -109,7 +109,49 @@
             }
         }
         &-count {
+
+            &_plus {
+                cursor: pointer;
+                display: inline-flex;
+                justify-content: center;
+                color: $color-white;
+                width: 30px;
+                background: #333951;
+                align-items: center;
+                height: 30px;
+                font-size: 30px;
+                border-radius: 50%;
+                background-clip: padding-box;
+                margin-left: 10px;
+            }
+            &_minus {
+                cursor: pointer;
+                display: inline-flex;
+                justify-content: center;
+                color: $color-white;
+                width: 30px;
+                background: #333951;
+                align-items: center;
+                height: 30px;
+                font-size: 30px;
+                border-radius: 50%;
+                background-clip: padding-box;
+                margin-right:  10px;
+            }
+            &_minus:hover , &_plus:hover{
+                background-color: $color-light-blue;
+            }
+            &_minus, &_plus {
+                &.mat-button-disabled  {
+                    background: $color-white-greey;
+                    color: $color-white03;
+                    &:hover {
+                        background-color: $color-white-greey;
+                    }
+                }
+            }
             &_number {
+                width: 100px;
                 ::ng-deep{
                     .mat-form-field-infix{
                         input {
