--- a/frontend/src/styles/_common.scss
+++ b/frontend/src/styles/_common.scss
@@ -28,6 +28,7 @@ body {
     font-size: 16px;
     font-weight: normal;
     font-weight: 400;
+    font-family: Roboto,"Helvetica Neue",sans-serif;
     color: #404040;
     background-color: #fff;
     overflow-x: hidden;
