--- a/frontend/src/app/pages/account/account.component.html
+++ b/frontend/src/app/pages/account/account.component.html
@@ -16,7 +16,7 @@
     </div>
     <div class="user-profile-text">
       <h4 class="title" *ngIf="user">{{user.firstName + ' ' + user.lastName}}</h4>
-      <span class="discription">norm pacan</span>
+      <span class="discription"></span>
     </div>
     <div class="card-content">
       <div class="card-content_buttons">
